--- a/react_intro/task_4/dashboard/package.json
+++ b/react_intro/task_4/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://IrakozeLoraine.github.io/holbertonschool-web_react",
+  "homepage": "http://IrakozeLoraine.github.io/alu-web_react",
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
