--- a/react_intro/task_4/dashboard/package.json
+++ b/react_intro/task_4/dashboard/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^12.7.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -41,6 +41,6 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^6.3.0"
   }
 }
